[project]
name = "brick"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gabe Fierro", email = "gtfierro@mines.edu" }
]
dependencies = [
    "owlrl>=6.0",
    "rdflib>=7.0",
    "pytest>=7.3",
    "tqdm>=4.0",
    "pyshacl>=0.25",
    "docker>=6.0",
    "black==24.3.0",
    "pre-commit>=3.2",
    "flake8>=6.0",
    "pytest-xdist[psutil]>=3.5.0",
    "brickschema[all]>=0.7.5",
    "semver>=2.10.1",
    "html5lib>=1.1",
    "pyontoenv>=0.1.9a6",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
