[tool.poetry]
name = "brickschema"
version = "0.0.1-alpha2"
description = "A library for working with the Brick ontology for buildings (brickschema.org)"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]
include = ["brickschema/ontologies"]
homepage = "https://brickschema.org"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.7"
rdflib = "^4.2"
owlrl = "^5.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
