[tool.poetry]
name = "brickschema"
version = "0.0.1"
description = "A library for working with the Brick ontology for buildings (brickschema.org)"
readme = "README.md"
authors = ["Gabe Fierro <gtfierro@cs.berkeley.edu>"]
include = ["brickschema/ontologies", "tests/data"]
homepage = "https://brickschema.org"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
rdflib = "^4.2"
owlrl = "^5.2"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
mkdocs = "^1.0"
pdoc3 = "^0.7.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
